# WhisperTranscriber

./: .gitignore  AudioPlaybackService.py  CHANGELOG_AFTER_FIRST.md  DictionaryService.py  ExportService.py  GlossaryService.py  MicRecordService.py  NOTES.md  OllamaService.py  README.md  SessionService.py  TranscriptionService.py  WhisperTranscriber.iss  YouTubeDownloadService.py  build.py  build_installer.ps1  create_splash.py  i18n.py  language_names.py  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.cursor/plans/: desktop_whisper_transcriber_7f62afdd.plan.md  global_dictionaries_and_presets.plan.md  global_dictionaries_and_presets_e5c30a55.plan.md  model_download_status_plan.md
asr_backends/: __init__.py  base.py  faster_whisper_backend.py  whisper_streaming_backend.py  whisperx_backend.py
locales/: en.json  es.json  kk.json  ru.json
tests/: conftest.py  test_dictionary_service.py  test_export_service.py  test_glossary_service.py  test_language_names.py  test_session_service.py
