[project]
name = "whisper-transcriber"
version = "0.1.0"
description = "Desktop Whisper Transcriber — транскрибация аудио/видео (faster-whisper, Whisper-Streaming, WhisperX)"
readme = "README.md"
requires-python = ">=3.12,<3.13"

[tool.setuptools.packages.find]
where = ["."]
include = ["asr_backends*"]
